# x86-simd

./: Cargo.toml  README.md
.github/workflows/: cargo-check.yml  cargo-test.yml  codecov-io.yml  coveralls.yml
benches/: simd_sum.rs
src/: integers.rs  lib.rs  sealed.rs
src/integers/: int256.rs
