[package]
name = "x86-simd"
version = "0.2.1"
edition = "2021"
authors = ["Venus Xeon-Blonde <venus@venusblon.de>"]
description = "Safe interfaces to x86 and x86_64 SIMD intrinsics"
documentation = "https://docs.rs/x86-simd"
repository = "https://github.com/vcfxb/x86-simd"
license = "MIT"
keywords = ["simd", "x86", "x86-64"]
categories = ["no-std"]


[features]
default = ["std"]
std = []

# [target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]

[build-dependencies]
rustc_version = "0.4.0"

[dev-dependencies]
# criterion = { version = "0.5", features = ["html_reports"] }
# rand = "0.8.5"
